# oda

./: .gitignore  CMakeLists.txt  README.md
doc/: plan.md
doc/logs/: 2021_03_14_log.txt
include/LibPhys/Math/: Constants.h  Conversions.h  GeometryTypes.h  Measurements.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  math_helper.h
include/LibPhys/Test/: Vector2_test.cpp  Vector2_test.h
include/Misc/: print_utils.h
include/libphys/math/: Scalar2.h  Scalar3.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  math_helper.h
include/libphys/test/: Vector2_test.cpp  Vector2_test.h
include/utils/: print_utils.h
src/: main.cpp
